added info in README.md to refer to from config.ini
================================END==========================================

=================================5===========================================
This was a difficult one to crack... Not difficult, i was stupid at times, added
ability to backup shit while keeping the package as portable as i currently could
next is gonna be ability to restore game saves, that will be easier as i just need
to reverse the process, might also add a rudimentary interface. I wanted to make a
temp directory to handle all the files related to transfer but ftplib kept giving an 
error 550 SUPER ANNOYING. As a bonus added pathparser and namer to handle reaching 
a path utilizing games ini and namer handles the nomenclature of saves.
==================================END=========================================

================================5.5===========================================
Tested satability of backerupper lol, got idea of custom savenames, so started 
restorer as that as main feature...
===============================END============================================

==================================6===========================================
You can get files from the ftp now (Technically), Still the important part of 
putting the files back in the location where thay are supposed to be (OVERWRITING)
remains but ig this much is enough for this commit, adding the feature in the next 
one prolly
==================================END=========================================

===================================7==========================================
Dispatcher function added which dispatches the saves to the location where they 
should be and deletes the temporary transfer zip which previously would've remained
in the cwd (Useless lil' pieces of shit) now the interface remains.... finally
the basics of the backend are done at lucky change 7! Up next will be the interface 
of all this shit.