@@ -7,3 +7,12 @@ extpath = AppData\Roaming\.minecraft\saves
 
 [FALLOUT 3]
 extpath = OneDrive\Documents\My Games\Fallout3
+
+[FALLOUT NV]
+extpath = OneDrive\Documents\My Games\FalloutNV
+
+[TERRARIA]
+extpath = OneDrive\Documents\My Games\Terraria
+
+[CRYSIS]
+extpath = OneDrive\Documents\My Games\Crysis
